Bug 373181: onload fires before page finishes parsing. r/sr=jst a=preed