mozilla/content/base/src/nsContentSink.h
@@ -73,9 +73,6 @@ class nsContentSink : public nsICSSLoaderObserver,
   // nsICSSLoaderObserver
   NS_IMETHOD StyleSheetLoaded(nsICSSStyleSheet* aSheet, PRBool aNotify);
 
-  void ContinueInterruptedParsingAsync();
-  void ContinueInterruptedParsing();
-
 protected:
   nsContentSink();
   virtual ~nsContentSink();
